cambios para hostear

--- a/vista/agregar.html
+++ b/vista/agregar.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agregar Nuevo Libro - Administración</title>
-    <style></style>
-    </style>
+    <link rel="icon" type="image/png" href="images/favicon.ico"> 
 </head>
 <link rel="stylesheet" href="style.css/agregar.css">
 <body>
