--- a/vista/generos.html
+++ b/vista/generos.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Categorías - Biblioteca Central</title>
+    <link rel="icon" type="image/png" href="images/favicon.ico"> 
 <link rel="stylesheet" href="style.css/generos.css">
 </head>
 <body>
@@ -24,7 +25,7 @@
         <!-- CONTENEDOR DE BOTONES -->
         <div class="header-buttons">
             <!-- Botón Volver -->
-            <a href="index.html" class="btn-glass">
+            <a href="../index.html" class="btn-glass">
                 <svg viewBox="0 0 24 24"><path d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"/></svg>
                 Volver
             </a>
